src/css/About.css
.aboutContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    height: 95vh;
}

.aboutContext {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
}

.aboutTitle {
    margin-top: 1em;
    width: fit-content;
    height: fit-content;
    background-color: lightblue;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: .2em;
    margin-bottom: 1em;
}

.aboutLeft {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    width: 40%;
    height: fit-content;
}

.aboutRight {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    width: 40%;
    height: fit-content;
    background-color: lightblue;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: 1.5em;
}

.aboutPicture {
    width: 90%;
    height: fit-content;
    background-color: lightblue;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: 1.5em;
    margin-bottom: 1em;
}

.aboutConnect {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;
    height: fit-content;
    background-color: lightblue;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: 1.5em;
}

.aboutLinks {
    margin-bottom: 5em;
}

@media (max-width: 770px) {
    .aboutContainer {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        height: fit-content;
    }

    .aboutTitle {
        margin-top: 1em;
        width: 90vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .aboutContext {
        display: flex;
        flex-direction: column;
        width: 90vw;
        align-items: center;
        justify-content: space-evenly;
    }

    .aboutLeft {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 90vw;
        height: fit-content;
    }

    .aboutRight {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 90vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .aboutPicture {
        display: flex;
        align-items: center;
        justify-content: space-between;
        width: 90vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .aboutConnect {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 90vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }
}
@media (max-width: 380px) {
    .aboutContainer {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        height: fit-content;
    }

    .aboutTitle {
        margin-top: 1em;
        width: 80vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .aboutContext {
        display: flex;
        flex-direction: column;
        width: 80vw;
        align-items: center;
        justify-content: space-evenly;
    }

    .aboutLeft {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 80vw;
        height: fit-content;
    }

    .aboutRight {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 80vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .aboutPicture {
        display: flex;
        align-items: center;
        justify-content: space-between;
        width: 80vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .aboutConnect {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 80vw;
        height: fit-content;
        background-color: lightblue;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }
}

